[gd_scene load_steps=22 format=2]

[ext_resource path="res://Art/Black_Spirit.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Black_Spirit.gd" type="Script" id=2]
[ext_resource path="res://themes/Enemybar2.tres" type="StyleBox" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Dodging"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Falling"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Falling_Shoot"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Falling_Swing"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 8, 5 ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Idle_Shoot"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Idle_Swing"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 6, 3 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Jumping"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Jumping_Shoot"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Jumping_Swing"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 7, 4 ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Walking_Shoot"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=13]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 6, 3 ]
}

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 12.5394, 10 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 16.8771, 25.2945 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 140, 35 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 70, 35 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.301961, 0, 0.419608, 1 )

[node name="Black_Spirit" type="KinematicBody2D"]
collision_layer = 526
collision_mask = 2147484174
script = ExtResource( 2 )

[node name="DodgeTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 5
hframes = 3
frame = 13

[node name="Stafftip" type="Position2D" parent="Sprite"]
position = Vector2( 25.3592, 3.41374 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Dodging = SubResource( 1 )
anims/Falling = SubResource( 2 )
anims/Falling_Shoot = SubResource( 3 )
anims/Falling_Swing = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Idle_Shoot = SubResource( 6 )
anims/Idle_Swing = SubResource( 7 )
anims/Jumping = SubResource( 8 )
anims/Jumping_Shoot = SubResource( 9 )
anims/Jumping_Swing = SubResource( 10 )
anims/Walking = SubResource( 11 )
anims/Walking_Shoot = SubResource( 12 )
anims/Walking_Swing = SubResource( 13 )

[node name="Staff" type="Area2D" parent="Sprite"]
collision_layer = 32
collision_mask = 32

[node name="Staff_Collision" type="CollisionShape2D" parent="Sprite/Staff"]
visible = false
position = Vector2( 28.3462, -1.42166 )
shape = SubResource( 14 )
disabled = true

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
enabled = true
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2.86083, -4.3074 )
shape = SubResource( 15 )

[node name="Right" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2147483680

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( 140, 0 )
shape = SubResource( 16 )

[node name="Left" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2147483680

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -140, 0 )
shape = SubResource( 16 )

[node name="Hit_Area" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit_Area"]
shape = SubResource( 17 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -50.0
margin_top = -48.5112
margin_right = 50.0
margin_bottom = -34.5112
custom_styles/fg = SubResource( 18 )
custom_styles/bg = ExtResource( 3 )
max_value = 200.0
value = 200.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Sprite/Staff" to="." method="_on_Staff_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="area_entered" from="Hit_Area" to="." method="_on_Hit_Area_area_entered"]
[connection signal="body_entered" from="Hit_Area" to="." method="_on_Hit_Area_body_entered"]
[connection signal="body_exited" from="Hit_Area" to="." method="_on_Hit_Area_body_exited"]
